tests/ui/regions/outlives-with-missing.stderr
error[E0425]: cannot find type `T` in this scope
  --> $DIR/outlives-with-missing.rs:10:9
   |
LL | impl<H: HandlerFamily> HandlerWrapper<H> {
   |      - similarly named type parameter `H` defined here
...
LL |         T: Send + Sync + 'static,
   |         ^
   |
help: a type parameter with a similar name exists
   |
LL -         T: Send + Sync + 'static,
LL +         H: Send + Sync + 'static,
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
